--- a/src/app/pages/dte/schedule-program/edit/schedule-program-edit.component.html
+++ b/src/app/pages/dte/schedule-program/edit/schedule-program-edit.component.html
@@ -26,7 +26,7 @@
             </mat-form-field>
           </div>
 
-          <div class="py-8">
+          <div class="py-8" *ngIf="dataScheduler['audience']">
 
             <div fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
@@ -35,7 +35,8 @@
             </div>
             <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-24" fxLayoutGap="25px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="45%" class="is-light form-primary">
-                <input matInput type="text" placeholder="Audience / Grup" [value]="dataScheduler['audience']" disabled>
+                <input matInput type="text" placeholder="Audience / Grup" [value]="dataScheduler['audience'].name"
+                  disabled>
                 <button mat-button matTooltip="Lihat daftar audience" matSuffix mat-icon-button>
                   <mat-icon>table_chart</mat-icon>
                 </button>
@@ -78,9 +79,13 @@
           </div>
         </div>
 
-        <div class="confirm pt-24 pb-24" *ngIf="dataScheduler['audience']" fxLayout="row" fxLayoutGap="20px">
-          <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
+        <div class="confirm pt-24 pb-24" *ngIf="dataScheduler['trade_audience_group_id']" fxLayout="row" fxLayoutGap="20px">
+          <!-- <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
             REJECT
+          </button> -->
+
+          <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
+            PUBLISH
           </button>
         </div>
       </form>
