list audience in schedule trade program

--- a/src/app/pages/dte/audience/edit/audience-edit.component.html
+++ b/src/app/pages/dte/audience/edit/audience-edit.component.html
@@ -87,6 +87,7 @@
           </div>
 
           <div class="p-0">
+            <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
             <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
               [rowHeight]="'auto'" [limit]="10" [selected]="selected" [selectionType]="'checkbox'"
               [selectAllRowsOnPage]="false" (select)='onSelect($event)' [sorts]="[{prop: 'name', dir: 'asc'}]">
