--- a/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
+++ b/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
@@ -65,7 +65,7 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
             <div class="name-container pl-12">
               <mat-icon *ngIf="row.status === 'publish'" class="active-icon mat-green-600-bg s-18">check</mat-icon>
-              <mat-icon *ngIf="row.status === 'draf'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
+              <mat-icon *ngIf="row.status === 'draft'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
             </div>
           </ng-template>
         </ngx-datatable-column>
