newsfeed & forgot password

--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -14,7 +14,7 @@
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <input matInput type="text" formControlName="name" placeholder="Nama Grup">
               <mat-error *ngIf="formAudience.controls['name'].hasError('required') && formAudience.controls['name'].touched">
-                Nama Pengatur Jadwal Program Dagang harus diisi
+                Nama Grup harus diisi
               </mat-error>
             </mat-form-field>
           </div>
