--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,28 +1,31 @@
-  <div id="ayoLogin" fxLayout="row" fxLayoutAlign="center center">
-    <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
-        <div class="lgn-box">
-          <div class="top">
-            <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
-            <div class="title">Forgot Password</div>
+<div id="ayoLogin" fxLayout="row" fxLayoutAlign="center center">
+  <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
+    <div class="lgn-box">
+      <div class="top">
+        <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
+        <div class="title">Lupa Kata Sandi</div>
+      </div>
+      <div class="middle-form">
+        <form name="form" [formGroup]="forgotPasswordForm">
+          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
+            <mat-form-field fxFlex="100" class="is-light form-primary">
+              <input matInput placeholder="Email" formControlName="email" type="email">
+              <mat-error *ngIf="forgotPasswordForm.controls['email'].hasError('required') && forgotPasswordForm.controls['email'].touched">
+                Email harus diisi
+              </mat-error>
+            </mat-form-field>
           </div>
-          <div class="middle-form">
-            <form name="form" [formGroup]="forgotPasswordForm">
-              <div class="label">Email</div>
-              <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
-                <mat-form-field fxFlex="100" class="form-primary">
-                  <input matInput type="email"  required>
-                </mat-form-field>
-              </div>
-              <div class="login-button" fxLayout="row">
-                <button mat-raised-button aria-label="Login" type="button" color="primary-red" [routerLink]="'/reset-password'">Reset Password</button>
-              </div>
+          <div class="login-button" fxLayout="row">
+            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">Atur
+              Ulang Kata Sandi</button>
+          </div>
 
-              <div fxLayout="row" fxLayoutAlign="center bottom">
-                  <p class="backtologin">Back to <a [routerLink]="'/login'">Login</a></p>
-              </div>
-          </form>
-        </div>
+          <div fxLayout="row" fxLayoutAlign="center bottom">
+            <p class="backtologin">Kembali ke <a [routerLink]="'/login'">Login</a></p>
+          </div>
+        </form>
       </div>
     </div>
-    
   </div>
+
+</div>
