--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -39,9 +39,9 @@
             <mat-checkbox class="remember-me red" aria-label="Remember Me">
               Ingat Saya
             </mat-checkbox>
-            <!-- <a class="forgot-password" [routerLink]="'/forgot-password'">
-              Forgot Password?
-            </a> -->
+            <a class="forgot-password" [routerLink]="'/forgot-password'">
+              Lupa kata sandi?
+            </a>
           </div>
 
           <div class="login-button" fxLayout="row">
