--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,31 +1,35 @@
 <div id="ayoLogin" fxLayout="row" fxLayoutAlign="center center">
-    <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
-        <div class="lgn-box">
-          <div class="top">
-            <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
-            <div class="title">Forgot Password</div>
+  <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
+    <div class="lgn-box">
+      <div class="top">
+        <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
+        <div class="title">Atur Ulang Kata Sandi</div>
+      </div>
+      <div class="middle-form">
+        <form name="form" [formGroup]="forgotPasswordForm">
+          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
+            <mat-form-field fxFlex="100" class="is-light form-primary">
+              <input matInput formControlName="password" placeholder="Kata Sandi Baru" type="password">
+              <mat-error *ngIf="forgotPasswordForm.controls['password'].hasError('required') && forgotPasswordForm.controls['password'].touched">
+                Kata sandi baru harus diisi
+              </mat-error>
+            </mat-form-field>
           </div>
-          <div class="middle-form">
-            <form name="form" [formGroup]="forgotPasswordForm">
-              <div class="label">Password</div>
-              <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
-                <mat-form-field fxFlex="100" class="form-primary">
-                  <input matInput type="password"  required>
-                </mat-form-field>
-              </div>
 
-              <div class="label">Confirm Password</div>
-              <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
-                <mat-form-field fxFlex="100" class="form-primary">
-                  <input matInput type="password"  required>
-                </mat-form-field>
-              </div>
-              <div class="login-button" fxLayout="row">
-                <button mat-raised-button aria-label="Login" type="button" color="primary-red" [routerLink]="'/dashboard'">Reset Password</button>
-              </div>
-          </form>
-        </div>
+          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
+            <mat-form-field fxFlex="100" class="is-light form-primary">
+              <input matInput formControlName="password_confirmation" placeholder="Konfirmasi Kata Sandi Baru" type="password">
+              <mat-error *ngIf="forgotPasswordForm.controls['password_confirmation'].hasError('required') && forgotPasswordForm.controls['password_confirmation'].touched">
+                Konfirmasi Kata Sandi Baru harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="login-button" fxLayout="row">
+            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">KIRIM</button>
+          </div>
+        </form>
       </div>
     </div>
-    
   </div>
+
+</div>
