--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -54,7 +54,7 @@
           }
 
           a.forgot-password {
-            color: #000;
+            color: $primary-red;
             font-weight: normal;
             font-size: 14px;
             line-height: 24px;
