--- a/src/global.scss
+++ b/src/global.scss
@@ -198,6 +198,20 @@ button.confirmation-button {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
 }
 
+mat-form-field.category {
+  .mat-form-field-infix {
+    min-width: 175px;
+  }
+
+  .mat-form-field-wrapper {
+    padding-bottom: 0;
+  }
+
+  .mat-form-field-underline {
+    display: none;
+  }
+}
+
 mat-form-field.radius-select {
   .mat-form-field-infix {
     border: 1px solid;
