css box forgot password

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -16,8 +16,7 @@
             </mat-form-field>
           </div>
           <div class="login-button" fxLayout="row">
-            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">Atur
-              Ulang Kata Sandi</button>
+            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">KIRIM</button>
           </div>
 
           <div fxLayout="row" fxLayoutAlign="center bottom">
