--- a/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/forgot-password/forgot-password.component.scss
@@ -22,6 +22,7 @@
         border-radius: 8px;
         padding-top: 38px;
         padding-bottom: 38px;
+        box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.33);
 
         .top {
           .title {
