add, edit, reset password admin principal

--- a/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
+++ b/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
@@ -39,12 +39,12 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <mat-form-field fxFlex="100" class="is-light">
+          <!-- <mat-form-field fxFlex="100" class="is-light">
             <input matInput placeholder="Kata Sandi Baru" type="password" formControlName="password">
           </mat-form-field>
           <mat-form-field fxFlex="100" class="is-light">
             <input matInput placeholder="Konfirmasi Kata Sandi" type="password" formControlName="confirmation_password">
-          </mat-form-field>
+          </mat-form-field> -->
 
           <!-- <div class="btn-confirm" fxLayout="row" fxLayoutGap="25px">
             <button mat-stroked-button>Reset Password</button>
