--- a/src/app/pages/user-management/field-force/create/field-force-create.component.html
+++ b/src/app/pages/user-management/field-force/create/field-force-create.component.html
@@ -24,20 +24,12 @@
                 </mat-error>
               </mat-form-field>
 
-              <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
-                <div class="label">Nomor Ponsel</div>
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                  <mat-form-field fxFlex="10" fxFlex.xs="30" class="form-primary">
-                    <input matInput value="+62" readonly>
-                  </mat-form-field>
-                  <mat-form-field fxFlex="90" fxFlex.xs="70" class="form-primary">
-                    <input matInput formControlName="phone" numeric-only>
-                  </mat-form-field>
-                </div>
-                <mat-error *ngIf="verticalStepperStep1.controls['phone'].hasError('required') && verticalStepperStep1.controls['phone'].touched ">
-                  Nomor Ponsel harus diisi.
+              <mat-form-field fxFlex="100" class="is-light">
+                <input matInput type="text" placeholder="Username" formControlName="username">
+                <mat-error *ngIf="verticalStepperStep1.controls['username'].hasError('required') && verticalStepperStep1.controls['username'].touched ">
+                  Username harus diisi.
                 </mat-error>
-              </div>
+              </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
